<resources>
    <string name="app_name">葡萄纬度</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>

    <!--我-->
    <string name="order">我的订单</string>
    <string name="address">收货地址</string>
    <string name="action">我参与的活动</string>
    <string name="question">我的提问</string>
    <string name="participation">我的参与</string>
    <string name="collection">我的收藏</string>
    <string name="message">消息中心</string>
    <string name="no_address">还没有收货地址</string>
    <string name="address_manager">地址管理</string>
    <string name="consignee_name">收货人姓名</string>
    <string name="consignee_address">所在地区和街道地址</string>
    <string name="consignee_mobile">电话号码</string>
    <string name="must">(必填)</string>
    <string name="et_name">请输入收件人真实姓名</string>
    <string name="et_street">街道地址</string>
    <string name="et_phone">手机号码或固定电话</string>
    <string name="default_address">设为默认收货地址</string>
    <string name="delete_address">删除本条地址</string>
    <string name="aboutus">关于我们</string>
    <string name="clear">清除缓存</string>
    <string name="modifypassword">修改登录密码</string>
    <string name="setting">设置</string>
    <string name="exitaccout">退出当前账户</string>
    <string name="myorder">我的订单</string>
    <!--葡商城-->

    <!--探索号-->
    <string name="manager">管理</string>
    <!--葡星圈-->
    <!--发现-->
    <string name="discovery">发现</string>

    <!--分享-->
    <string name="wechat">微信</string>
    <string name="wechat_friend_circle">微信朋友圈</string>
    <string name="share_collection">收藏</string>
    <string name="qq">QQ好友</string>
    <string name="qq_zone">QQ空间</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="copy_url">复制链接</string>
    <string name="safari">浏览器打开</string>
    <!--登录注册-->
    <string name="login_title">登录葡萄账户</string>
    <string name="mobile">手机号码</string>
    <string name="login_password">登录密码</string>
    <string name="regist_password">密码(6-18位)</string>
    <string name="login">登录</string>
    <string name="reg_user">注册新用户</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_title">注册葡萄账户</string>
    <string name="next">下一步</string>
    <string name="graph_verify">图形验证码</string>
    <string name="sms_verify">验证码</string>
    <string name="get_verify">获取验证码</string>

    <!--提问-->
    <string name="myquestion">我的提问</string>
    <string name="question_empty">还没有任何提问</string>
    <string name="question_hint">在这里输入问题，200字以内</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_message_center_activity_test">MessageCenterActivityTest</string>

    <string name="question_1"><!--打开葡萄科技产品任一款产品,点击\"帮助\"找到\"葡萄纬度\"入口,点击后获取关联二维码。-->
        打开葡萄APP游戏，点击左侧葡萄纬度图标获取二维码</string>
    <string name="question_2">即使在同一台iPad设备上安装了多个葡萄科技系列产品，也均需逐个扫描进行关联。</string>

    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载: </string>
    <string name="umeng_common_pause_notification_prefix">暂停: </string>
    <string name="umeng_common_start_download_notification">正在下载应用</string>
    <string name="umeng_common_start_patch_notification">正在更新安装包</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="umeng_common_download_finish">下载完成，请点击安装</string>
    <string name="umeng_common_patch_finish">更新完成，请点击安装</string>
    <string name="umeng_common_silent_download_finish">新版本已经准备好，请点击安装</string>


    <string name="UMBreak_Network">未联网</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="UMNewVersion">最新版本: </string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <color name="tb_munion_item_force">#e3e3e3</color>
    <string name="tb_munion_tip_download_prefix">正在下载:</string>
    <string name="umeng_common_icon">icon</string>
    <string name="UMUpdateCheck">2.6.0.1.20150312</string>

    <!--陪伴的默认详情-->
    <string name="companion_taotaoright">通过视觉识别系统，\n\n小朋友线下完成七巧板拼图，\n\n和线上精灵伙伴淘淘进行冒险之旅。\n\n孩子在解决困难后，\n\n专注力、想象力、创造力、\n\n空间智能将得到大大的提升。</string>
    <string name="companion_mofang">利用计算机视觉技术，\n\n实现实体魔方玩具的\n\n所有面和颜色的精准识别，\n\n实时生成魔方还原步骤，\n\n让孩子可以无师自通学会还原魔方，\n\n体验魔方的魅力。</string>
    <string name="companion_banderui">跟着活泼生动的故事情节，\n\n敲击无国界多元化的音乐节奏，\n\n经历着一场又一场可爱的冒险，\n\n让操作空间更广阔，音乐学习更有趣。</string>
    <string name="companion_maisisi">神秘的麦斯丝世界，奇幻而未知的冒险，\n\n变换莫测的难关疑题，\n\n在这里能让原本枯燥乏味的数学充满乐趣，\n\n提升数学能力多喝逻辑思维能力。</string>
    <string name="companion_tutuWord">以小Q克服各种困难拯救地球为故事背景，\n\n孩子通过对配套涂色卡进行涂色和识别，\n\n解锁任务关卡，培养孩子的创造力。</string>
    <string name="companion_hello">简单的积木式指令模块配合生动三维影像，\n\n带给孩子全新的学习体验！\n\n让孩子早人一步get新时代的必备技能\n\n──编程技术吧！</string>
    <string name="companion_hani">探索海洋世界，\n\n和各类真实还原的海洋生物进行对话与互动，\n\n由孩子们亲手创造出的鱼儿\n\n传递海洋中的众多科普知识。</string>

    <!--图片的加载显示-->
    <string name="viewpager_indicator">%1$d/%2$d</string>

    <!--未关联产品-->
    <string name="no_commpaion">如果您有葡萄产品，\n请在此处将它与您的纬度帐号进行关联。\n关联后可更好的了解孩子成长变化。</string>
    <string name="history_commpaion">关联产品后可查看更多内容，\n帮助您更好的陪伴孩子哦！</string>
    <string name="history_subscribe">订阅后可查看更多精彩内容</string>
</resources>
