<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <!--标题栏-->
    <com.sunnybear.library.view.NavigationBar
        style="@style/style_navigation_bar"
        auto:nav_left_icon="@drawable/btn_20_back_p_sel"
        auto:nav_main_title="@string/setting"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.sunnybear.library.view.SettingItem
            android:layout_marginTop="20dp"
            auto:setting_text="@string/modifypassword"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <com.sunnybear.library.view.SettingItem
            auto:setting_text="@string/aboutus"
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <TextView
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#ed5564"
            android:background="#fff"
            android:text="@string/exitaccout"
            android:layout_width="match_parent"
            android:layout_height="44dp" />
    </LinearLayout>
</LinearLayout>