<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--标题栏-->
    <com.sunnybear.library.view.NavigationBar
        style="@style/style_navigation_bar"
        auto:nav_left_icon="@drawable/back_selector"
        auto:nav_main_title="@string/register_title"
        auto:nav_main_title_color="@color/text_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--手机号码-->
        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.sunnybear.library.view.CleanableEditText
                android:id="@+id/et_mobile"
                style="@style/WeiduText.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="@string/mobile"
                android:inputType="phone"
                auto:maxLength="11" />
            <!--间隔线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/divider_color" />
        </LinearLayout>

        <!--图形验证码-->
        <RelativeLayout
            android:id="@+id/rl_graph_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_phone">

            <com.sunnybear.library.view.CleanableEditText
                android:id="@+id/et_graph_verify"
                style="@style/WeiduText.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="@string/graph_verify"
                android:inputType="numberPassword" />
            <!--图形验证码-->
            <com.sunnybear.library.view.image.ImageDraweeView
                android:layout_width="88dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@id/et_graph_verify"
                android:src="@mipmap/ic_launcher" />
            <!--间隔线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/et_graph_verify"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/divider_color" />
        </RelativeLayout>

        <!--短信验证码-->
        <RelativeLayout
            android:id="@+id/rl_sms_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_graph_verify"
            android:paddingRight="8dp">

            <com.sunnybear.library.view.CleanableEditText
                android:id="@+id/et_sms_verify"
                style="@style/WeiduText.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="@string/sms_verify"
                android:inputType="numberPassword" />

            <TextView
                android:id="@+id/tv_get_verify"
                style="@style/style_login_text"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/get_verify"
                android:textSize="@dimen/text_size_16sp" />
            <!--竖向间隔线-->
            <View
                android:layout_width="1px"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:layout_toLeftOf="@id/tv_get_verify"
                android:background="@color/divider_color" />
            <!--间隔线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/et_sms_verify"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/divider_color" />
        </RelativeLayout>

        <!--注册密码-->
        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_sms_verify"
            android:orientation="vertical">

            <com.sunnybear.library.view.CleanableEditText
                android:id="@+id/et_password"
                style="@style/WeiduText.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:hint="@string/login_password"
                android:inputType="numberPassword" />
            <!--间隔线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/divider_color" />
        </LinearLayout>

        <!--登录按钮-->
        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_password"
            android:layout_margin="16dp"
            android:background="#C2C2C2"
            android:text="@string/next"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_next"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="点击下一步表示您已同意"
                android:textColor="@color/main_color_sel"
                android:textSize="@dimen/text_size_16sp"/>

            <TextView
                android:id="@+id/tv_user_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="《用户服务协议》"
                android:textColor="@color/main_color_sel"
                android:textSize="@dimen/text_size_16sp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>